--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Jônatas Vargatt</title>
   </head>
   <body>
-    <header id="main">
-      <nav id="menu">
+
+  <header id="main">
+    <nav id="menu">
         <h3>Jônatas</h3>
         <ul>
           <li><a href="#">services</a></li>
           <li><a href="#">portfolio</a></li>
           <li><a href="#">contato</a></li>
         </ul>
-      </nav>
+    </nav>
     <main id="hero">
       <h1>HALIFAX WORDPRESS &
         WEB APP DEVELOPMENT</h1>
@@ -25,9 +28,34 @@
       </p>
       <button>Comece agora</button>
     </main>
-
   </header>
-   
-    <script type="module" src="js/script.js"></script>
+
+  <section id="services">
+    <div class="cards">
+      <div class="service">
+        <i class="material-icons">fact_check</i>
+        <h2>Design + Development</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
+      </div>
+
+      <div class="service">
+        <i class="material-icons">fact_check</i>
+        <h2>Design + Development</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
+      </div>
+
+      <div class="service">
+        <i class="material-icons">fact_check</i>
+        <h2>Design + Development</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
+    </div>
+  </div>
+  <a href="#">Ver mais</a>
+</section>
+
+<div class="divider"></div>
+
+
+  <script type="module" src="js/script.js"></script>
   </body>
 </html>
