--- a/index.html
+++ b/index.html
@@ -4,58 +4,110 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Jônatas Vargatt</title>
   </head>
   <body>
-
-  <header id="main">
-    <nav id="menu">
+    <header id="main">
+      <nav id="menu">
         <h3>Jônatas</h3>
         <ul>
           <li><a href="#">services</a></li>
           <li><a href="#">portfolio</a></li>
           <li><a href="#">contato</a></li>
         </ul>
-    </nav>
-    <main id="hero">
-      <h1>HALIFAX WORDPRESS &
-        WEB APP DEVELOPMENT</h1>
-      <p>Specializing in custom theme development. 
-        If you're a business seeking a web presence or are looking to hire, 
-        contact me here.
-      </p>
-      <button>Comece agora</button>
-    </main>
-  </header>
+      </nav>
+      <main id="hero">
+        <h1>HALIFAX WORDPRESS & WEB APP DEVELOPMENT</h1>
+        <p>
+          Specializing in custom theme development. If you're a business seeking
+          a web presence or are looking to hire, contact me here.
+        </p>
+        <button>Comece agora</button>
+      </main>
+    </header>
 
-  <section id="services">
-    <div class="cards">
-      <div class="service">
-        <i class="material-icons">fact_check</i>
-        <h2>Design + Development</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
+    <section id="services">
+      <div class="cards">
+        <div class="service">
+          <i class="material-icons">fact_check</i>
+          <h2>Design + Development</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            quasi amet quo et maxime autem impedit.
+          </p>
+        </div>
+
+        <div class="service">
+          <i class="material-icons">fact_check</i>
+          <h2>Design + Development</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            quasi amet quo et maxime autem impedit.
+          </p>
+        </div>
+
+        <div class="service">
+          <i class="material-icons">fact_check</i>
+          <h2>Design + Development</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+            quasi amet quo et maxime autem impedit.
+          </p>
+        </div>
       </div>
+      <a href="#">Ver mais</a>
+    </section>
 
-      <div class="service">
-        <i class="material-icons">fact_check</i>
-        <h2>Design + Development</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
+    <div class="divider"></div>
+
+    <section id="portfolio">
+      <div class="container">
+        <h2>portfolio</h2>
+
+        <div class="item">
+          <div>
+            <img src="https://jonny.me/dist/images/hal-con.webp" alt="" />
+          </div>
+          <div class="about">
+            <h3>Agyle Intelligence 2019</h3>
+            <p>
+              A platform for automating data collection and reporting throughout
+              teams, operations and supply chains.
+            </p>
+            <div class="buttons">
+              <a href="#" class="filled">Preview</a>
+              <a href="#">Visit Site</a>
+            </div>
+          </div>
+        </div>
       </div>
+      <hr />
+      <div class="container">
+        <div class="item">
+          <div>
+            <img src="https://jonny.me/dist/images/hal-con.webp" alt="" />
+          </div>
+          <div class="about">
+            <h3>Agyle Intelligence 2019</h3>
+            <p>
+              A platform for automating data collection and reporting throughout
+              teams, operations and supply chains.
+            </p>
+            <div class="buttons">
+              <a href="#" class="filled">Preview</a>
+              <a href="#">Visit Site</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+    </section>
+    <div class="divider"></div>
 
-      <div class="service">
-        <i class="material-icons">fact_check</i>
-        <h2>Design + Development</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi amet quo et maxime autem impedit.</p>
-    </div>
-  </div>
-  <a href="#">Ver mais</a>
-</section>
-
-<div class="divider"></div>
-
-
-  <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
