--- a/index.html
+++ b/index.html
@@ -104,10 +104,23 @@
           </div>
         </div>
       </div>
-      <hr />
     </section>
-    <div class="divider"></div>
-
+    <section id="contact">
+      <div class="container">
+        <!-- <h1>Gostaria de entrar em contato comigo?</h1> -->
+        <h1>Vamos conversar?</h1>
+        <p>Use o formulário abaixo ou envie um email para vargattjh@gmail.com</p>
+        <form>
+          <!-- <label for="name">Nome</label> -->
+          <input name="name" id="name" type="text" placeholder="nome"/>
+          <!-- <label for="email">Email</label> -->
+          <input name="email" id="email" type="email"  placeholder="email"/>
+          <!-- <label for="message">Mensagem</label> -->
+          <textarea name="message" id="message" placeholder="mensagem"></textarea>
+          <button>Enviar</button>
+        </div>
+      </form>
+    </section>
     <script type="module" src="js/script.js"></script>
   </body>
 </html>
