--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="container">
           <h3>Jônatas</h3>
           <ul>
-            <li><a href="#">services</a></li>
-            <li><a href="#">portfolio</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a id="sec-services" href="#">services</a></li>
+            <li><a id="sec-portfolio" href="#">portfolio</a></li>
+            <li><a id="sec-contact" href="#">contato</a></li>
           </ul>
         </div>
       </nav>
@@ -136,15 +136,9 @@
         </div>
       </form>
     </section>
-    <!-- <div class="glider">
-      <div> Slide 1 </div>
-      <div> Slide 2 </div>
-      <div> Slide 3 </div>
-    </div>
-    <div id="dots"></div>
-    <a class="glider-prev">&laquo;</a>
-    <a class="glider-next">&raquo;</a> -->
     <script src="js/glider.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script type="module" src="js/script.js"></script>
   </body>
 </html>
